estudianteschart/templates/overlays/production/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estudiantestrabajo-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: estudiantestrabajo-mysql
  template:
    spec:
      containers:
        - name: estudiantestrabajo
          resources:
            requests:
              cpu: "600m"
              memory: "1200Mi"
            limits:
              cpu: "800m"
              memory: "1600Mi"
