estudianteschart/templates/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: estudiantesproduction-ingress
